2011-01-24 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-clone-in-mail):
	New.
	(tinydebian-bts-mail-ctrl-command-clone): Rewrite.
	(tinydebian-bts-mail-ctrl-clone-new-mail): Rename. Was
	`tinydebian-bts-mail-ctrl-command-clone'.

2011-01-14 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tiny-admin-util.el (tiny-setup-autoload-build-functions-all):
	Exclude loaddefs file.

2011-01-06  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-with-file-env-macro):
	remove unused let variable `original-backup-inhibited'.


2010-12-27 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode): Remove
	`tinydebian-bug-browse-url-by-bug' and use generic
	`tinydebian-bug-browse-url-main'.
	(tinydebian--emacs-bts-email-address): Change emacsbugs.donarmstrong.com
	to debbugs.gnu.org.
	(tinydebian-bug-gnu-emacs-bts-re-search-email): Check control@ address.
	(tinydebian--emacs-bts-url-http-bugs): Chnage emacsbugs.donarmstrong.com
	to debbugs.gnu.org.

2010-12-26 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-any-in-string): Adjust
	submatch.
	(tinydebian-bug-nbr-any-in-string): Add another regecp.
	(tinydebian-bug-nbr-article-buffer): New. Look at Subject.

2010-12-22 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinytf.el: (top level): Update documentation to
	use `write-file-functions'.

	* tiny/tinyperl.el (tinyperl-install-hooks): Update to
	`write-file-functions' from `write-file-hooks'.

	* tiny/tinymail.el (tinymail-install-hooks): Update to
	`write-file-functions' from `write-file-hooks'.

	* tiny/tinylib.el (ti::package-autoload-loaddefs-build-dir-1):
	Remove `write-file-hooks'.

	* tiny/tinydesk.el: Update to `write-file-functions' from
	`write-file-hooks'.

	* tiny/tinydebian.el (tinydebian-install): Adjust comments.

	* tiny/tinyadvice.el (after-find-file): Remove.

2010-12-20  Jari Aalto  <jari.aalto@cante.net>
